Bug 448815 - shortcuts don't work on rare occasions
Summary: shortcuts don't work on rare occasions
Status: RESOLVED FIXED
Alias: None
Product: liquidshell
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.8
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Koller
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-20 10:10 UTC by Yuri
Modified: 2022-01-22 12:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri 2022-01-20 10:10:35 UTC
SUMMARY
shortcuts don't work on rare occasions

STEPS TO REPRODUCE
1. in an empty virtual desktop (without other apps) run firefox
2. maximize firefox window
3. close firefox window

OBSERVED RESULT
All shortcuts don't work. 

EXPECTED RESULT
Shortcuts should work. Note: it is a bug of liquidshell because it doesn't happen on plasma shell

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.16.1-zen1-1-zen
(available in About System)
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
This bug happens when you close the last (maximized) window of firefox, if there are other firefox windows opened, it doesn't happen. And there must be no other windows of other applications in this virtual desktop.
Comment 1 Martin Koller 2022-01-22 09:12:35 UTC
Thanks for reporting. I can reproduce it. Don't know how it can be a problem with liquidshell, since maximizing a window on some other application does not show the same result.
Still, will look into it. Maybe I find at least a workaround.
I also found that even the power button on my laptop to suspend the device does no longer react in this scenario
Comment 2 Martin Koller 2022-01-22 12:50:26 UTC
Git commit 1d95e2f07cda9aa76fec873faa753b208fba0ada by Martin Koller.
Committed on 22/01/2022 at 12:49.
Pushed by mkoller into branch 'master'.

allow focus on DesktopWidth to fix issue with global shortcuts

M  +3    -1    DesktopWidget.cxx

https://invent.kde.org/system/liquidshell/commit/1d95e2f07cda9aa76fec873faa753b208fba0ada
Comment 3 Martin Koller 2022-01-22 12:52:52 UTC
I found no other solution than to allow the keyboard focus also for the Desktop Widget, which has the disadvantage that
when clicking on the background, the active window will lose focus and no longer be the active window.
However I see that plasmashell acts in the same way.