allow focus on DesktopWidth to fix issue with global shortcuts

BUG: 448815